Setup json-server and Improve code

--- a/signup.html
+++ b/signup.html
@@ -16,69 +16,80 @@
     <title>Sign up</title>
   </head>
   <body>
-    <main id="signup">
+    <main>
       <section class="section-signup">
-        <h1>Sign up</h1>
+        <h1>Sign up to Take the Test</h1>
 
-        <form class="form-signup">
-          <div class="form-signup__field">
-            <label class="form-signup__label" for="first-name">
-              First name
-            </label>
-            <input
-              class="form-signup__input"
-              type="text"
-              id="first-name"
-              name="first-name"
-            />
-            <span class="form-signup__err form-signup__err--firstname"></span>
-          </div>
-          <div class="form-signup__field">
-            <label class="form-signup__label" for="last-name">Last name</label>
-            <input
-              class="form-signup__input"
-              type="text"
-              id="last-name"
-              name="last-name"
-            />
-            <span class="form-signup__err form-signup__err--lastname"></span>
-          </div>
-          <div class="form-signup__field">
-            <label class="form-signup__label" for="email">Email address</label>
-            <input
-              class="form-signup__input"
-              type="email"
-              id="email"
-              name="email"
-            />
-            <span class="form-signup__err form-signup__err--email"></span>
-          </div>
-          <div class="form-signup__field">
-            <label class="form-signup__label" for="password">Password</label>
-            <input
-              class="form-signup__input"
-              type="password"
-              id="password"
-              name="password"
-            />
-            <span class="form-signup__err form-signup__err--password"></span>
-          </div>
-          <div class="form-signup__field">
-            <label class="form-signup__label" for="confirm-password">
-              Confirm Password
-            </label>
-            <input
-              class="form-signup__input"
-              type="password"
-              id="confirm-password"
-              name="confirm-password"
-            />
-            <span class="form-signup__err form-signup__err--confirm-pass">
-            </span>
-          </div>
+        <div class="section-signup__layout">
+          <img
+            class="section-signup__img"
+            src="assets/student.svg"
+            alt="Student"
+          />
+          <form class="form-signup">
+            <div class="form-signup__field">
+              <label class="form-signup__label" for="first-name">
+                First name
+              </label>
+              <input
+                class="form-signup__input"
+                type="text"
+                id="first-name"
+                name="first-name"
+              />
+              <span class="form-signup__err form-signup__err--firstname"></span>
+            </div>
+            <div class="form-signup__field">
+              <label class="form-signup__label" for="last-name"
+                >Last name</label
+              >
+              <input
+                class="form-signup__input"
+                type="text"
+                id="last-name"
+                name="last-name"
+              />
+              <span class="form-signup__err form-signup__err--lastname"></span>
+            </div>
+            <div class="form-signup__field">
+              <label class="form-signup__label" for="email"
+                >Email address</label
+              >
+              <input
+                class="form-signup__input"
+                type="email"
+                id="email"
+                name="email"
+              />
+              <span class="form-signup__err form-signup__err--email"></span>
+            </div>
+            <div class="form-signup__field">
+              <label class="form-signup__label" for="password">Password</label>
+              <input
+                class="form-signup__input"
+                type="password"
+                id="password"
+                name="password"
+              />
+              <span class="form-signup__err form-signup__err--password"></span>
+            </div>
+            <div class="form-signup__field">
+              <label class="form-signup__label" for="confirm-password">
+                Confirm Password
+              </label>
+              <input
+                class="form-signup__input"
+                type="password"
+                id="confirm-password"
+                name="confirm-password"
+              />
+              <span class="form-signup__err form-signup__err--confirm-pass">
+              </span>
+            </div>
 
-          <button class="btn form-signup__btn">Sign up</button>
-        </form>
+            <button class="btn form-signup__btn">Sign up</button>
+          </form>
+        </div>
       </section>
     </main>
 
