--- a/signin.html
+++ b/signin.html
@@ -16,7 +16,36 @@
     <title>Sign in</title>
   </head>
   <body>
-    <h1>Sign in Page</h1>
+    <main>
+      <section class="section-signin">
+        <h1>Sign in</h1>
+
+        <form class="form-signin">
+          <div class="form-signin__field">
+            <label class="form-signin__label" for="email">Email address</label>
+            <input
+              class="form-signin__input"
+              type="email"
+              id="email"
+              name="email"
+            />
+            <span class="form-signin__err form-signin__err--email"></span>
+          </div>
+          <div class="form-signin__field">
+            <label class="form-signin__label" for="password">Password</label>
+            <input
+              class="form-signin__input"
+              type="password"
+              id="password"
+              name="password"
+            />
+            <span class="form-signin__err form-signin__err--password"></span>
+          </div>
+
+          <button class="btn form-signin__btn">Sign in</button>
+        </form>
+      </section>
+    </main>
 
     <script type="module" src="js/index.js"></script>
   </body>
