--- a/exam.html
+++ b/exam.html
@@ -13,10 +13,19 @@
 
     <link rel="stylesheet" href="main.css" />
 
-    <title>Welcome</title>
+    <title>Exam</title>
   </head>
   <body>
-    <h1>Home Page</h1>
+    <main></main>
+
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
 
     <script type="module" src="js/index.js"></script>
   </body>
