--- a/signin.html
+++ b/signin.html
@@ -13,12 +13,12 @@
 
     <link rel="stylesheet" href="main.css" />
 
-    <title>Sign in</title>
+    <title>Log in</title>
   </head>
   <body>
     <main>
       <section class="section-signin">
-        <h1>Sign in</h1>
+        <h1>Log in to start your exam</h1>
 
         <form class="form-signin">
           <div class="form-signin__field">
@@ -42,7 +42,7 @@
             <span class="form-signin__err form-signin__err--password"></span>
           </div>
 
-          <button class="btn form-signin__btn">Sign in</button>
+          <button class="btn form-signin__btn">Log in</button>
         </form>
       </section>
     </main>
